Fixed alignment and CSS issues with Business Registration

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -52,7 +52,7 @@ body{
             display: inline-block;
             width: 100%;
           }
-  .title-cover-right h1 {
+  .title-cover-right h1, .businessHeading {
     color: #fff;
     font-size: 2.5em;
     margin-bottom: 1.5em;
@@ -95,8 +95,8 @@ body{
 
         .businessRegistration-cover-left {
 
-            background-image: url("/images/onlinePhone.png");
-
+            background-image: url("/images/businessRegistration.jpeg");
+            width: 35%;
             background-repeat:no-repeat;
    background-size:contain;
    height: 250px;
